tests/paczka1/fuzzy1/25748137.err
Error in line 2: S3 S819 74,9
Error in line 5: S3 S819 287,6
Error in line 3: DT449PCnXg2 A4 73,8
Error in line 21: DT449PCnXg2 S3 58,3
Error in line 23: S3 A4 29,5
Error in line 24: S3 S819 98,5
Error in line 32: S3 A4 14,9
Error in line 35: S3 S3 93,1
